--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header class="main-header">
             <div class="container">
-                <a href="index.html" class="logo">TRE-EVENTS</a>
+                <a href="index.html" class="logo"><h1 id="title">TRE-EVENTS</h1></a>
                 <nav class="main-nav">
                     <ul class="main-nav-list">
                         <li>
