--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="logo">
             <h1 class="sogni">Perchè noi?</h1>
             <br>
-            <img src="assets/logo.png" alt="logo">
+            <img src="assets/logo.png" alt="logo" class="index-img" class="index-img">
             <p class="treevents"><b>Tre-events</b> nasce dalla voglia di regalare emozioni, tramite l'estro, la passione e la dedizione di due giovani ragazzi.<br>
             Il nostro desiderio è quello di rendere indimenticabile ogni vostro evento. <br>
             Tre-events rappresenta la freschezza, l'innovazione e la capacità di saper catturare ogni minimo dettaglio.
@@ -49,7 +49,7 @@
         <div id="fiori">
             <h2 class="sogni">Flower Design</h2>
             <br>
-            <img src="assets/flowerdesign.jpg" alt="flowerdesign">
+            <img src="assets/flowerdesign.jpg" alt="flowerdesign" class="index-img">
             <p class="fiori"> 
                 Da sempre ci affidiamo ai migliori esperti in <b>decorazioni floreali</b> per riuscrire a dare la giusta luce e il giusto colore ai vostri giorni speciali.
                 <br>Crediamo che fiori siano il sinonimo di bellezza, di forza e di amore. <br>
@@ -60,7 +60,7 @@
         <div id="location">
             <h2 class="sogni">Location</h2>
             <br>
-            <img src="assets/spiaggia.png" alt="spiaggia"><img src="assets/lago.png" alt="logo"><img src="assets/vigna.png" alt="vigna">
+            <img src="assets/spiaggia.png" alt="spiaggia" class="index-img"><img src="assets/lago.png" alt="logo" class="index-img"><img src="assets/vigna.png" alt="vigna" class="index-img">
             <p class="location"> 
             Tre-event collabora con moltissime <b>location</b> in tutta Italia per riuscire a soddisfare ogni vostra esigenza.<br>
             Sappiamo quanto sia difficile scegliere il luogo del vostro evento, per questo con noi potrai visitare senza impegno tutte le nostre location per scegliere in completa tranquillità.<br>
@@ -70,7 +70,7 @@
         <div id="torte">
             <h2 class="sogni">Cake Design</h2>
             <br>
-            <img src="assets/tortam.png" alt="tortam">
+            <img src="assets/tortam.png" alt="tortam" class="index-img">
             <p class="torta" id="torta2"> 
             Non c'è evento che si rispetti senza il taglio della <b> torta </b>, che sia un matrimonio, un compleanno o una festa di laurea, la torta segna la fine del giorno speciele.<br>
             Per questo noi di Tre-events ci affidiamo a mastri pastecceri e cake designer per realizzare il finale che meriti e che sogni. 
