--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
                 </nav>
             </div>
         </header>
-        <div class="caption">
-            <h1>La vita è un evento, rendilo indimenticabile!</h1></div>
+        <div class="caption-container">
+            <h1>La vita è un evento, rendilo indimenticabile!</h1>
             <video class="videotavolo" controls>
                 <source src="assets/tavolo.mp4" type="video/mp4">
             </video>
+        </div>        
         <div id="logo">
             <h1 class="sogni">Perchè noi?</h1>
             <br>
