--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <body>
         <header class="main-header">
             <div class="container">
-                <a href="index.html" class="logo"><h1 id="title">TRE-EVENTS</h1></a>
-                <button class="hamburger" id="hamburger-menu">
-                    ☰
-                </button>
+                <div id="navbarContainer">
+                    <a href="index.html" class="logo"><h1 id="title">TRE-EVENTS</h1></a>
+                    <button class="hamburger" id="hamburger-menu">
+                        ☰
+                    </button>
+                </div>
                 <nav class="main-nav" id="main-nav">
                     <ul class="main-nav-list">
                         <li>
