--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div id="logo">
             <h1 class="sogni">Perchè noi?</h1>
             <br>
-            <img src="assets/logo.png" alt="logo" class="index-img" class="index-img">
+            <img src="https://i.ibb.co/CJYPgDz/logo.png" alt="logo" border="0" class="index-img">
             <p class="treevents"><b>Tre-events</b> nasce dalla voglia di regalare emozioni, tramite l'estro, la passione e la dedizione di due giovani ragazzi.<br>
             Il nostro desiderio è quello di rendere indimenticabile ogni vostro evento. <br>
             Tre-events rappresenta la freschezza, l'innovazione e la capacità di saper catturare ogni minimo dettaglio.
@@ -54,7 +54,7 @@
         <div id="fiori">
             <h2 class="sogni">Flower Design</h2>
             <br>
-            <img src="assets/flowerdesign.jpg" alt="flowerdesign" class="index-img">
+            <a href="https://ibb.co/S3TxVzf"><img src="https://i.ibb.co/BCDPT9n/flowerdesign.jpg" alt="flowerdesign" border="0" class="index-img"></a>
             <p class="fiori"> 
                 Da sempre ci affidiamo ai migliori esperti in <b>decorazioni floreali</b> per riuscrire a dare la giusta luce e il giusto colore ai vostri giorni speciali.
                 <br>Crediamo che fiori siano il sinonimo di bellezza, di forza e di amore. <br>
@@ -65,7 +65,9 @@
         <div id="location">
             <h2 class="sogni">Location</h2>
             <br>
-            <img src="assets/spiaggia.png" alt="spiaggia" class="index-img"><img src="assets/lago.png" alt="logo" class="index-img"><img src="assets/vigna.png" alt="vigna" class="index-img">
+            <img src="https://i.ibb.co/1mxk920/spiaggia.png" alt="spiaggia" border="0">
+            <img src="https://i.ibb.co/QNQxZVV/lago.png" alt="lago" border="0" class="index-img">
+            <img src="https://i.ibb.co/bBnKKpm/vigna.png" alt="vigna" border="0">
             <p class="location"> 
             Tre-event collabora con moltissime <b>location</b> in tutta Italia per riuscire a soddisfare ogni vostra esigenza.<br>
             Sappiamo quanto sia difficile scegliere il luogo del vostro evento, per questo con noi potrai visitare senza impegno tutte le nostre location per scegliere in completa tranquillità.<br>
@@ -75,7 +77,7 @@
         <div id="torte">
             <h2 class="sogni">Cake Design</h2>
             <br>
-            <img src="assets/tortam.png" alt="tortam" class="index-img">
+            <img src="https://i.ibb.co/rpD5yW4/tortam.png" alt="tortam" border="0" class="index-img">
             <p class="torta" id="torta2"> 
             Non c'è evento che si rispetti senza il taglio della <b> torta </b>, che sia un matrimonio, un compleanno o una festa di laurea, la torta segna la fine del giorno speciele.<br>
             Per questo noi di Tre-events ci affidiamo a mastri pastecceri e cake designer per realizzare il finale che meriti e che sogni. 
