--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         </header>
         <div class="caption-container">
             <h1>La vita è un evento, rendilo indimenticabile!</h1>
-            <video class="videotavolo" controls>
-                <source src="assets/tavolo.mp4" type="video/mp4">
-            </video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/3cQtgCDNBnc?si=-g18OXjKAaz43iM9&autoplay=1&mute=1&controls=0&modestbranding=1&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
         </div>        
         <div id="logo">
             <h1 class="sogni">Perchè noi?</h1>
@@ -54,7 +54,7 @@
         <div id="fiori">
             <h2 class="sogni">Flower Design</h2>
             <br>
-            <a href="https://ibb.co/S3TxVzf"><img src="https://i.ibb.co/BCDPT9n/flowerdesign.jpg" alt="flowerdesign" border="0" class="index-img"></a>
+            <img src="https://i.ibb.co/BCDPT9n/flowerdesign.jpg" alt="flowerdesign" border="0" class="index-img">
             <p class="fiori"> 
                 Da sempre ci affidiamo ai migliori esperti in <b>decorazioni floreali</b> per riuscrire a dare la giusta luce e il giusto colore ai vostri giorni speciali.
                 <br>Crediamo che fiori siano il sinonimo di bellezza, di forza e di amore. <br>
