--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <div class="caption-container">
             <h1>La vita è un evento, rendilo indimenticabile!</h1>
             <div class="responsive-iframe-container" style="position: relative; z-index: 10; width: 1120px;">
-                <iframe width="1120" height="630" src="https://www.youtube.com/embed/xOu-34zgCYw?si=gTuB5V3W73FCTXVX&autoplay=1&mute=1&controls=0&modestbranding=1&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1001;"></div>
-            </div>
+                <iframe width="1120" height="630" src="https://www.youtube.com/embed/xOu-34zgCYw?si=gTuB5V3W73FCTXVX&autoplay=1&mute=1&controls=0&modestbranding=1&rel=0&loop=1&playlist=xOu-34zgCYw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 100;"></div>
+            </div>            
         </div>        
         <div id="logo">
             <h1 class="sogni">Perchè noi?</h1>
